# yt-dlp-plugins

./: README.md  default.nix  flake.nix  pyproject.toml  setup.cfg
yt_dlp_plugins/extractor/: cdnvideohub.py  flashvars.py  iframe.py  iwarareplacer.py  jwplayer.py  kodik.py  obrut.py  openload.py  ralode.py  rutubeplst.py  rutubeshorts.py  tap.py  tobaco.py
